nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/hostname: lguplus2backend.tk
    # external-dns.alpha.kubernetes.io/hostname: alb.lguplus2.tk
spec:
  selector:
     app: nginx
  type: LoadBalancer
  ports:
  - port: 80 # ingress
    protocol: TCP
    targetPort: 80 #fff
---
apiVersion: v1
kind: Service
metadata:
  name: productservice
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/hostname: lguplus2backend.tk
    # external-dns.alpha.kubernetes.io/hostname: alb.lguplus2.tk
spec:
  selector:
     app: productservice
  type: ClusterIP
  ports:
  - port: 8080 # ingress
    protocol: TCP
    targetPort: 8080 #fff   
---
apiVersion: v1
kind: Service
metadata:
  name: cartservice
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/hostname: lguplus2backend.tk
    # external-dns.alpha.kubernetes.io/hostname: alb.lguplus2.tk
spec:
  selector:
     app: cartservice
  type: ClusterIP
  ports:
  - port: 8080 # ingress
    protocol: TCP
    targetPort: 8080 #fff   
---
apiVersion: v1
kind: Service
metadata:
  name: purchaseservice
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/hostname: lguplus2backend.tk
    # external-dns.alpha.kubernetes.io/hostname: alb.lguplus2.tk
spec:
  selector:
     app: purchaseservice
  type: ClusterIP
  ports:
  - port: 8080 # ingress
    protocol: TCP
    targetPort: 8080 #fff   
---
apiVersion: v1
kind: Service
metadata:
  name: rateservice
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/hostname: lguplus2backend.tk
    # external-dns.alpha.kubernetes.io/hostname: alb.lguplus2.tk
spec:
  selector:
     app: rateservice
  type: ClusterIP
  ports:
  - port: 8080 # ingress
    protocol: TCP
    targetPort: 8080 #fff
