nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: alb # use the one that corresponds to your ingress controller.
    alb.ingress.kubernetes.io/scheme: internet-facing # add 1
    alb.ingress.kubernetes.io/target-type: ip # add
spec:
  rules:
    # - host: alb.lguplus2.tk
    - host: lguplus2backend.tk
      http:
        paths:
          - path: /purchase
            pathType: ImplementationSpecific
            # pathType: Prefix
            backend:
              service:
                name: purchaseservice
                port:
                  number: 8080
          - path: /cart
            pathType: ImplementationSpecific
            # pathType: Prefix
            backend:
              service:
                name: cartservice
                port:
                  number: 8080
          - path: /rate
            pathType: ImplementationSpecific
            # pathType: Prefix
            backend:
              service:
                name: rateservice
                port:
                  number: 8080
          - path: /rate/*
            pathType: ImplementationSpecific
            # pathType: Prefix
            backend:
              service:
                name: rateservice
                port:
                  number: 8080
          - path: /prd/*
            pathType: ImplementationSpecific
            # pathType: Prefix
            backend:
              service:
                name: productservice
                port:
                  number: 8080 #
